add memory settingsy