@@ -7,6 +7,11 @@
 
 	<repositories>
 		<repository>
+                <id>eclipsesmarthome</id>
+  
+                <url>https://repo.eclipse.org/content/repositories/smarthome-releases/</url>
+            </repository>
+		<repository>
 			<id>eclipselink</id>
 			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo/</url>
 		</repository>
@@ -76,6 +81,18 @@
 
 
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.pcap4j/pcap4j-core -->
+		<dependency>
+			<groupId>org.pcap4j</groupId>
+			<artifactId>pcap4j-core</artifactId>
+			<version>1.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.smarthome.core</groupId>
+			<artifactId>org.eclipse.smarthome.core</artifactId>
+			<version>0.9.0.b5</version>
+		</dependency>
+
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
@@ -457,6 +474,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
+    				<configuration>
+        				<argLine>${argLine} -Xmx512m -XX:MaxPermSize=256m</argLine>
+    				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
